# gabion

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  rail.toml  release-please-config.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: check.yml  docker.yml  ghcr-cleanup.yml  kubernetes.yml  nginx.yml  release-please.yml  safety.yml  wasm.yml
crates/core/: Cargo.toml
crates/core/benches/: core_engine.rs
crates/core/src/: lib.rs
crates/core/tests/: no_alloc.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/envoy/: Cargo.toml
crates/envoy/src/: lib.rs
crates/gabion/: CRDT.md  Cargo.toml  README.md
crates/gabion-wasm/: Cargo.toml  README.md  smoke.cjs
crates/gabion-wasm/src/: clock.rs  config.rs  engine.rs  event.rs  hex.rs  lib.rs  shims.rs  wasm.rs
crates/gabion-wasm/src/engine/: tests.rs
crates/gabion-wasm/web/: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
crates/gabion-wasm/web/src/: App.svelte  app.css  main.ts
crates/gabion-wasm/web/src/lib/: buckets.ts  presets.ts
crates/gabion-wasm/web/src/lib/charts/: Chart.svelte  history.ts  options.ts
crates/gabion-wasm/web/src/lib/components/: BucketStrata.svelte  ControlRail.svelte  Dashboard.svelte  GossipCadence.svelte  HeadlineMetric.svelte  InfoTip.svelte  NodeInspector.svelte  Stage.svelte  StorageCapacity.svelte  TransportBar.svelte
crates/gabion-wasm/web/src/lib/sim/: sim.ts  types.ts
crates/gabion-wasm/web/src/lib/stage/: layout.ts  renderer.ts
crates/gabion-wasm/web/tests/: screenshot.spec.ts
crates/gabion/benches/: crdt.rs
crates/gabion/src/: admin.rs  config.rs  core.rs  crdt.rs  defaults.rs  discovery.rs  gossip.rs  gossip_runtime.rs  lib.rs  rules.rs  tests.rs  window.rs  wire.rs
crates/gabion/src/core/: tests.rs
crates/gabion/src/crdt/: dictionary.rs  dirty_ring.rs  hash.rs  index.rs  io.rs  peer_frontier.rs  tests.rs
crates/gabion/src/discovery/: kubernetes.rs  tests.rs
crates/gabion/src/discovery/kubernetes/: tests.rs
crates/gabion/src/gossip/: admin.rs  client.rs  clock.rs  runtime.rs  sim.rs  store.rs  tests.rs  transport.rs
crates/gabion/src/rules/: tests.rs
crates/gabion/src/window/: tests.rs
crates/gabion/src/wire/: auth.rs  body.rs  header.rs  tests.rs
crates/gabion/src/wire/auth/: tests.rs
crates/gabion/src/wire/body/: tests.rs
crates/gabion/src/wire/header/: tests.rs
crates/gossip/: Cargo.toml
crates/gossip-bench/: AUDIT.md  AUDIT2.md  Cargo.toml  README.md  REFERENCES.md
crates/gossip-bench/audit/: 00-headings.md  01-title-page.md  02-intro-glossary.md
crates/gossip-bench/bench/: plot.py  render.py  report.py  report.typ  tufte.py
crates/gossip-bench/src/: lib.rs  metrics.rs  scenario.rs  scenarios.rs  transport.rs
crates/gossip/benches/: gossip_codec.rs
crates/gossip/src/: lib.rs
crates/loader/: Cargo.toml
crates/loader/src/: main.rs  tests.rs
crates/nginx/: Cargo.toml  README.md  build.rs
crates/nginx/src/: access.rs  headers.rs  identity.rs  leader.rs  lib.rs  log.rs  module.rs  request_queue.rs  rules.rs  shm.rs  tests.rs
crates/nginx/src/access/: mock.rs  tests.rs
crates/nginx/src/headers/: tests.rs
crates/nginx/src/identity/: tests.rs
crates/nginx/src/leader/: tests.rs
crates/nginx/src/log/: tests.rs
crates/nginx/src/request_queue/: tests.rs
crates/nginx/src/rules/: tests.rs
crates/nginx/src/shm/: aggregate.rs  header.rs  lease.rs  queue.rs  stats.rs  tests.rs
crates/nginx/src/shm/aggregate/: tests.rs
crates/nginx/src/shm/header/: tests.rs
crates/nginx/src/shm/lease/: tests.rs
crates/nginx/src/shm/queue/: tests.rs
crates/nginx/tests/: ffi_alignment.rs  safety.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: admin.rs  admission.rs  config.rs  identity.rs  lib.rs  store.rs  tests.rs
crates/server/src/admin/: tests.rs
crates/server/src/config/: tests.rs
crates/server/src/identity/: tests.rs
deploy/gabiond/: Dockerfile
deploy/kubernetes/: distributed-rate-limit-loader.py  distributed-rate-limit.sh  gabion-discovery-rbac.yaml  gabiond-distributed-rate-limit.sh  gossip-propagation-bench.py  loader.Dockerfile  local-clean.sh  local-smoke.sh  mixed-nginx-gabion-gossip.sh  nginx-distributed-rate-limit.sh  nginx-scale-rate-limit.sh
deploy/nginx/: Dockerfile  Dockerfile.openresty  README.md  build-matrix.sh  build-openresty-matrix.sh  docker-compose.yml  gabion-load-module.conf  gabion-load-module.openresty.conf  module-request-smoke.sh  nginx.base.conf  nginx.distributed.conf  nginx.module.conf  nginx.smoke.conf  smoke-with-bt.sh
docs/: CRDT Module.md  Gossip Propagation Benchmarks.md  Gossip Protocol Gap Closure Plan.md  Gossip Protocol Rate Limiting.md
