[workspace]
resolver = "3"
members = [
    "crates/gabion",
    "crates/server",
    "crates/nginx",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ahash = "0.8"
axum = "0.8"
async-stream = "0.3"
bon = "3"
educe = "0.6"
either = "1"
envoy-types = "0.7"
futures = "0.3"
gabion = { path = "crates/gabion" }
gabion-server = { path = "crates/server" }
hmac = "0.12"
humantime = "2"
humantime-serde = "1"
k8s-openapi = { version = "0.26", features = ["v1_34"] }
kube = { version = "2", features = ["client", "runtime"] }
nginx-sys = { version = "0.5", default-features = false }
ngx = { version = "0.5", default-features = false, features = ["std"] }
quickcheck = "1"
quickcheck_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
socket2 = "0.6"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "test-util"] }
tonic = "0.14"
tracing = "0.1"
twox-hash = "2.1.2"

[profile.release]
lto = "fat"
codegen-units = 1
