[workspace]
resolver = "3"
members = [
    "crates/gabion",
    "crates/gossip-bench",
    "crates/loader",
    "crates/server",
    "crates/nginx",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
arrayvec = "0.7"
axum = "0.8"
async-stream = "0.3"
bon = "3"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
criterion = "0.8"
dashmap = "6"
educe = "0.6"
either = "1"
envoy-types = "0.7"
futures = "0.3"
gabion = { path = "crates/gabion" }
gabion-server = { path = "crates/server" }
getrandom = "0.3"
hmac = "0.12"
humantime = "2"
humantime-serde = "1"
# Pin to v1_30 (the floor supported by kube 2.0.1 / k8s-openapi 0.26).
# The Kubernetes upstream contract allows a 2-minor-version skew between
# client and server, so this binding talks to servers v1.28–v1.32+ without
# changes — wider than the maintenance window of any single cloud
# provider. The Service / EndpointSlice surface we consume has been GA
# since v1.21 and unchanged for our purposes.
k8s-openapi = { version = "0.26", features = ["v1_30"] }
kube = { version = "2", features = ["client", "runtime"] }
nginx-sys = { version = "0.5", default-features = false }
ngx = { version = "0.5", default-features = false, features = ["std"] }
quickcheck = "1"
quickcheck_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
socket2 = "0.6"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "test-util", "time"] }
tonic = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
tower = { version = "0.5", default-features = false, features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twox-hash = "2.1.2"
whoami = "1"

[profile.release]
lto = "fat"
codegen-units = 1
