[workspace]
resolver = "3"
members = [
    "crates/gabion",
    "crates/gabion-wasm",
    "crates/gossip-bench",
    "crates/loader",
    "crates/server",
    "crates/nginx",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
arrayvec = "0.7"
axum = "0.8"
async-stream = "0.3"
bon = "3"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
criterion = "0.8"
dashmap = "6"
educe = "0.6"
either = "1"
envoy-types = "0.7"
futures = "0.3"
gabion = { path = "crates/gabion" }
gabion-server = { path = "crates/server" }
# `std` so `getrandom::Error` implements `std::error::Error` (anyhow `.context`
# in gabiond); `sys_rng` selects the OS backend (0.4 made it opt-in). The
# wasm32 target adds `wasm_js` in gabion's manifest.
getrandom = { version = "0.4", features = ["std", "sys_rng"] }
hmac = "0.13"
humantime = "2"
humantime-serde = "1"
# Pin to v1_31 (the floor offered by k8s-openapi 0.27; it dropped v1_30).
# The Kubernetes upstream contract allows a 2-minor-version skew between
# client and server, so this binding talks to servers v1.29–v1.33+ without
# changes — wider than the maintenance window of any single cloud
# provider. The Service / EndpointSlice surface we consume has been GA
# since v1.21 and unchanged for our purposes.
k8s-openapi = { version = "0.27", features = ["v1_31"] }
kube = { version = "3", features = ["client", "runtime"] }
nginx-sys = { version = "0.5", default-features = false }
ngx = { version = "0.5", default-features = false, features = ["std"] }
quickcheck = "1"
quickcheck_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
socket2 = "0.6"
thiserror = "2"
# Wasm-safe base: every feature here builds on wasm32-unknown-unknown so the
# library crate compiles for the visualizer. Crates needing host-only drivers
# (`net`, `rt-multi-thread`, `signal`) add them in their own manifest, and
# `gabion`'s `transport-udp` feature pulls `tokio/net` for the UDP transport.
tokio = { version = "1", features = ["macros", "rt", "sync", "test-util", "time"] }
tonic = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
tower = { version = "0.5", default-features = false, features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Only `xxhash3_128` (with fixed secrets) is used — never the randomly-seeded
# hashers — so drop the `random` default feature, which pulls `rand` (and its
# `getrandom`). Trimming it removes `rand` from the graph entirely.
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash3_128", "std"] }
# Visualizer wasm bridge (crates/gabion-wasm). Only ever resolved for the
# wasm32 target — the native side of that crate doesn't touch these.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
whoami = "2"

[profile.release]
lto = "fat"
codegen-units = 1
# Keep address → file:line mapping in release binaries so a SIGSEGV at
# 2am (or in CI, where `gdb` is the only signal) produces a backtrace
# pointing at Rust source instead of bare addresses. `line-tables-only`
# is the smallest debuginfo bump: no variable info, no codegen change,
# no LTO impact — only the line tables. Adds ~3–5 MB to the nginx .so
# and to `gabiond`.
debug = "line-tables-only"
