[package]
name = "gabion-discovery"
version.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
