[package]
name = "gabion"
version.workspace = true
edition.workspace = true

[dependencies]
ahash.workspace = true
async-stream.workspace = true
axum.workspace = true
bon.workspace = true
educe.workspace = true
either.workspace = true
futures.workspace = true
hmac.workspace = true
humantime-serde.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
twox-hash.workspace = true

[dev-dependencies]
criterion.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true

[[bench]]
name = "crdt"
harness = false
