[package]
name = "gossip-bench"
version.workspace = true
edition.workspace = true

[lib]

[[bin]]
name = "gossip-bench"
path = "src/bin/gossip_bench.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
futures.workspace = true
gabion.workspace = true
humantime.workspace = true
humantime-serde.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "test-util", "time"] }
tracing.workspace = true
