[package]
name = "gabion-gossip"
version.workspace = true
edition.workspace = true

[dependencies]
gabion-core.workspace = true
hmac.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true

[[bench]]
name = "gossip_codec"
harness = false
