[package]
name = "gabion-loader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
envoy-types.workspace = true
futures.workspace = true
# `#[tokio::main]` + TCP sockets + spawned workers: host-only drivers the
# workspace base no longer carries.
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread"] }
tonic.workspace = true
