[package]
name = "gabion-nginx"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
futures.workspace = true
gabion.workspace = true
humantime = { workspace = true, optional = true }
nginx-sys = { workspace = true, optional = true }
ngx = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
twox-hash.workspace = true
whoami.workspace = true

[features]
default = []
ngx-module = ["dep:humantime", "dep:nginx-sys", "dep:ngx", "export-modules"]
export-modules = []

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
