[package]
name = "gabion-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
arrayvec.workspace = true
axum.workspace = true
config.workspace = true
dashmap.workspace = true
envoy-types.workspace = true
futures.workspace = true
# `cell-dump` lets `/debug/introspection` walk the `CellStore` to surface
# per-cell counts and origins — feature-gated inside `gabion` so callers
# that don't need it never compile the cell-iteration path.
gabion = { workspace = true, features = ["cell-dump"] }
humantime.workspace = true
humantime-serde.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
# Host-only drivers the workspace base no longer carries: TCP/UDP sockets,
# the multi-threaded runtime (tests), and Unix signal handling for gabiond.
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal"] }
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
twox-hash.workspace = true
whoami.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
serde_json.workspace = true
tower.workspace = true
